deploy/ops-broker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ops-broker
  namespace: opencost
spec:
  selector:
    app: ops-broker
  ports:
    - port: 80
      targetPort: 8080
